fix: toc mobile alignment

--- a/src/styles/pages_styles/pages_projects_individual.scss
+++ b/src/styles/pages_styles/pages_projects_individual.scss
@@ -81,6 +81,7 @@ footer {
     position: fixed;
     z-index: 90;
     user-select: none;
+    min-height: 300px;
 
     //Used to create a masking layer to hide the toc when moved off main
     &::before {
@@ -108,6 +109,7 @@ footer {
     padding-left: 4em;
     width: fit-content;
     font-weight: 400;
+    min-height: 300px;
 
     ol {
         line-height: 3em;
